feat(finanzen): redesign beitragsregeln with sortierung-based architecture
- replaced alterVon chain logic with explicit sortierung ordering

- simplified Beitragsregel validation logic

- removed gap/overlap reconstruction from validator

- added deterministic rule ordering by rolle + sortierung

- migrated Beitragsregel matching to ordered rule evaluation

- updated TeilnehmerBeitragService to use BeitragsregelService

- removed duplicated beitrag calculation logic

- added AltersService integration for age calculation at event start

- updated default templates to use offene Regeln (alterBis = null)

- fixed deleteRegel handling for open-ended rules

- fixed FE sorting of beitragsregeln

- improved FE rendering for Leiter/Mitarbeiter rules

- removed misleading age display for role-specific rules

- improved Beitragsstruktur UI consistency

- updated tests for new Beitragsregel architecture

- cleaned obsolete alterVon assumptions across backend and frontend